Fix issues from backporting